[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
# basic
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
linked_list_allocator = "0.9.0"
# compile
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
# sync
spin = "0.5.2"
# io
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
run-args = ["-monitor", "stdio"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300
